src/test/deca/context/valid/logic/op-cmp-cov-float2.deca
// Programme testant int < float

{
    if (7.1 < 4) {}
}