src/test/deca/context/invalid/logic/boolean-int.deca
// Programme testant boolean && int

{
    if (true && 2) {}
}